--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+	<!-- https://mavenlibs.com/maven/dependency/org.javassist/javassist -->
+	<dependency>
+		<groupId>org.javassist</groupId>
+		<artifactId>javassist</artifactId>
+		<version>3.18.2-GA</version>
+	</dependency>
         <dependency>
             <groupId>javassist</groupId>
             <artifactId>javassist</artifactId>
